--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,12 +1,12 @@
 .header {
     max-width: 1140px;
     width: 100%;
-    
     border: 1px solid black;
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-inline: 100px;
+    transition: all 0.3s ease;
 
     @include mobile {
         margin-inline: 70px;
@@ -22,10 +22,7 @@
     }
 }
 
-
-
 .header_logo {
-    
     color: #161c2d;
     font-family: "Rubik";
     font-size: 24px;
@@ -37,8 +34,8 @@
     transition: all 0.3s ease;
 
     @include desktop {
-    font-size: 22px;
-    margin-left: -45px;
+        font-size: 22px;
+        margin-left: -45px;
     }
 
     @include tablet {
@@ -50,17 +47,13 @@
         font-size: 15px;
         margin-left: -30px;
     }
-    
 }
 
 .container_left {
     display: flex;
     flex-direction: row;
     align-items: baseline;
-     
 }
-
-
 
 .nav_menu {
     display: flex;
@@ -71,13 +64,13 @@
     transition: all 0.3s ease;
 
     @include desktop {
-    column-gap: 20px;
-    margin-left: 20px;
+        column-gap: 20px;
+        margin-left: 20px;
     }
 
     @include tablet {
-    column-gap: 15px;
-    margin-left: 15px;
+        column-gap: 15px;
+        margin-left: 15px;
     }
 
     @include mobile {
@@ -92,26 +85,22 @@
     font-weight: 700;
     line-height: 26px; /* 173.333% */
     letter-spacing: -0.1px;
-    
     display: flex; // Добавлено
     align-items: flex-end;
-   
     transition: all 0.3s ease;
 
     @include desktop {
-    font-size: 13.5px;
+        font-size: 13.5px;
     }
 
     @include tablet {
-    font-size: 12px;
+        font-size: 12px;
     }
 }
 
 .nav_link {
     position: relative;
     transition: color 0.3s ease;
-    
-    
 }
 
 .nav_link:hover {
