--- a/src/components/Feedback/Feedback.module.scss
+++ b/src/components/Feedback/Feedback.module.scss
@@ -15,7 +15,8 @@
 .left {
     flex-shrink: 0;
     transition: all 0.3s ease;
-
+    display: flex;
+    align-items: center;
     @include tablet {
         width: 150px;
     }
@@ -30,6 +31,7 @@
 }
 
 .feedback_container {
+    position: relative;
     display: flex;
     justify-content: center;
     column-gap: 80px;
@@ -42,10 +44,10 @@
     @include mobile {
         column-gap: 50px;
     }
-
+    
     @include mobile-s {
-        column-gap: 40px;
         flex-direction: column;
+        column-gap: 40px;
         row-gap: 25px;
         align-items: center;
     }
@@ -59,7 +61,6 @@
 
     @include mobile-s {
         align-items: center;
-        
     }
 }
 
@@ -81,7 +82,6 @@
     @include mobile-s {
         width: 85px;
         height: 12px;
-        
     }
 }
 
@@ -131,7 +131,6 @@
 
     @include mobile-s {
         align-self: flex-start;
-        
     }
 }
 
@@ -192,5 +191,34 @@
     @include mobile-s {
         font-size: 12px;
         line-height: 20px;
+    }
+}
+
+.feedback_container::before {
+    content: "";
+    max-width: 1108px;
+    width: 100%;
+    height: 10px;
+    background-color: red;
+    position: absolute;
+    bottom: -120px; // Располагаем линию под контейнером
+    height: 2px; // Толщина линии
+    background-color: #ccc;
+    transition: all 0.3s ease;
+
+    @include desktop {
+        bottom: -110px;
+    }
+
+    @include tablet {
+        bottom: -100px;
+    }
+
+    @include mobile {
+        bottom: -80px;
+    }
+
+    @include mobile-s {
+        bottom: -50px;
     }
 }
