--- a/src/components/Cards/Cards.module.scss
+++ b/src/components/Cards/Cards.module.scss
@@ -1,38 +1,36 @@
 .card {
-  width: 350px;
-  height: 483px;
-  border-radius: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-inline: 28px;
+  width: 350px;
+  height: 483px;
+  border-radius: 10px;
   transition: all 0.3s ease;
+  padding-inline: 28px;
 
-  @media (max-width: 1330px) {
+  @media (width <= 1330px) {
     width: 320px;
-    height: 483px;
   }
 
   @include tablet {
     width: 300px;
-    height: 460px;
+    height: 440px;
   }
 
   @include mobile {
     width: 260px;
-    height: 400px;
+    height: 370px;
   }
 
   @include mobile-s {
-    height: 340px;
+    height: 320px;
   }
 }
 
 .icon_container {
-  margin-top: 60px;
-  transition: all 0.3s ease;
   display: flex;
   justify-content: center;
+  margin-top: 60px;
   transition: all 0.3s ease;
 
   @include tablet {
@@ -66,12 +64,12 @@
 
 .title {
   margin-top: 46px;
-  color: #fff;
   font-size: 24px;
-  font-style: normal;
   font-weight: 700;
+  font-style: normal;
   line-height: 34px; /* 141.667% */
   letter-spacing: -0.5px;
+  color: #fff;
   transition: all 0.3s ease;
 
   @include desktop {
@@ -100,14 +98,14 @@
 
 .description {
   margin-top: 15px;
-  color: #fff;
   font-size: 17px;
-  font-style: normal;
   font-weight: 400;
+  font-style: normal;
   line-height: 29px; /* 170.588% */
   letter-spacing: -0.2px;
-  opacity: 0.65;
   text-align: center;
+  color: #fff;
+  opacity: 0.65;
   transition: all 0.3s ease;
 
   @include desktop {
@@ -133,49 +131,54 @@
 }
 
 .link {
-  margin-top: 45px;
   position: relative;
+  margin-top: 30px;
   margin-right: 55px;
-  color: #fff;
   font-size: 17px;
-  font-style: normal;
   font-weight: 700;
+  font-style: normal;
   line-height: 32px; /* 188.235% */
   letter-spacing: -0.6px;
+  color: #fff;
   transition: all 0.3s ease;
 
+  @media (width <= 1330px) {
+    margin-top: 20px;
+  }
+
   @include desktop {
+    margin-top: 30px;
     font-size: 15px;
     line-height: 28px;
   }
 
   @include tablet {
+    margin-right: 40px;
     font-size: 14px;
     line-height: 26px;
-    margin-right: 40px;
   }
 
   @include mobile {
+    margin-right: 30px;
     font-size: 13px;
     line-height: 24px;
-    margin-right: 30px;
   }
 
   @include mobile-s {
+    margin-right: 35px;
     font-size: 12px;
     line-height: 24px;
-    margin-right: 35px;
   }
 }
 
 .link::before {
   position: absolute;
-  content: url("../../assets/images/cards/arrow.svg");
   top: 1px;
   left: 120px;
   width: 13px;
   height: 14px;
   transition: all 0.3s ease;
+  content: url("../../assets/images/cards/arrow.svg");
 
   @include desktop {
     width: 12px;
@@ -183,22 +186,22 @@
   }
 
   @include tablet {
+    left: 110px;
     width: 11px;
     height: 12px;
-    left: 110px;
   }
 
   @include mobile {
+    top: 2px;
+    left: 90px;
     width: 10px;
     height: 11px;
-    left: 90px;
-    top: 2px;
   }
 
   @include mobile-s {
+    top: 2px;
+    left: 90px;
     width: 9px;
     height: 10px;
-    left: 90px;
-    top: 2px;
   }
 }
