--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,12 +1,12 @@
 .header {
-  max-width: 1140px;
-  width: 100%;
-  border: 1px solid black;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-inline: 100px;
+  width: 100%;
+  max-width: 1140px;
+  border: 1px solid black;
   transition: all 0.3s ease;
+  margin-inline: 100px;
 
   @include mobile {
     margin-inline: 70px;
@@ -23,29 +23,29 @@
 }
 
 .header_logo {
-  color: #161c2d;
-  font-family: "Rubik";
+  margin-left: -50px;
+  font-family: Rubik, sans-serif;
   font-size: 24px;
-  font-style: normal;
   font-weight: 700;
+  font-style: normal;
   line-height: normal;
   letter-spacing: -0.133px;
-  margin-left: -50px;
+  color: #161c2d;
   transition: all 0.3s ease;
 
   @include desktop {
-    font-size: 22px;
     margin-left: -45px;
+    font-size: 22px;
   }
 
   @include tablet {
-    font-size: 19px;
     margin-left: -40px;
+    font-size: 19px;
   }
 
   @include mobile {
-    font-size: 15px;
     margin-left: -30px;
+    font-size: 15px;
   }
 }
 
@@ -57,11 +57,11 @@
 
 .nav_menu {
   display: flex;
-  flex-grow: 1;
   align-items: flex-end;
+  flex-grow: 1;
   margin-left: 30px;
-  column-gap: 30px;
   transition: all 0.3s ease;
+  column-gap: 30px;
 
   @include desktop {
     column-gap: 20px;
@@ -79,14 +79,14 @@
 }
 
 .nav_item {
-  color: #161c2d;
-  font-size: 15px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 26px; /* 173.333% */
-  letter-spacing: -0.1px;
   display: flex; // Добавлено
   align-items: flex-end;
+  font-size: 15px;
+  font-weight: 700;
+  font-style: normal;
+  line-height: 26px; /* 173.333% */
+  letter-spacing: -0.1px;
+  color: #161c2d;
   transition: all 0.3s ease;
 
   @include desktop {
@@ -108,7 +108,6 @@
 }
 
 .nav_link::after {
-  content: "";
   position: absolute;
   bottom: 0;
   left: 0;
@@ -116,6 +115,7 @@
   height: 2px;
   background-color: var(--button-link-color);
   transition: width 0.3s ease;
+  content: "";
 }
 
 .nav_link:hover::after {
