--- a/src/index.scss
+++ b/src/index.scss
@@ -3,21 +3,21 @@
 }
 
 body {
+  font-family: Montserrat, sans-serif;
   font-size: 20px;
-  font-family: "Montserrat";
   font-weight: 400;
 }
 
 .bg-hero {
   position: relative;
-  max-width: 1600px;
-  width: 100%;
-  height: auto;
-  background: #f4f7fa;
   z-index: 0;
+  width: 100%;
+  max-width: 1600px;
+  height: auto;
   padding-top: 50px;
-  box-sizing: border-box;
   padding-bottom: 100px;
+  box-sizing: border-box;
+  background: #f4f7fa;
 
   @include mobile {
     padding-bottom: 70px;
@@ -25,28 +25,28 @@ body {
 }
 
 .bg-hero::before {
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  position: absolute;
-  content: "";
-  z-index: -1;
-  top: 0px;
-  left: 0px;
   background-image: url("/src/assets/images/hero/BG.svg");
+  background-repeat: no-repeat;
   background-position: top left;
   background-size: cover;
-  background-repeat: no-repeat;
+  content: "";
 }
 
 .red_text {
   margin-top: 133px;
-  color: #f64b4b;
   font-size: 13px;
-  font-style: normal;
   font-weight: 700;
+  font-style: normal;
   line-height: normal;
   letter-spacing: 1.625px;
   text-transform: uppercase;
+  color: #f64b4b;
   transition: all 0.3s ease;
 
   @include desktop {
@@ -55,20 +55,20 @@ body {
   }
 
   @include tablet {
+    margin-top: 50px;
     font-size: 10px;
     letter-spacing: 1.5px;
-    margin-top: 50px;
   }
 
   @include mobile {
+    margin-top: 50px;
     font-size: 9px;
     letter-spacing: 1.3px;
-    margin-top: 50px;
   }
 
   @include mobile-s {
+    margin-top: 50px;
     font-size: 8px;
     letter-spacing: 1.1px;
-    margin-top: 50px;
   }
 }
