--- a/src/components/Story/Story.module.scss
+++ b/src/components/Story/Story.module.scss
@@ -1,13 +1,12 @@
-//950px
 .root {
-  max-width: 1600px;
-  width: 100%;
-  padding-top: 130px;
-  transition: all 0.3s ease;
-  padding-inline: 100px;
-  padding-bottom: 100px;
   display: flex;
   justify-content: center;
+  width: 100%;
+  max-width: 1600px;
+  padding-top: 130px;
+  padding-bottom: 100px;
+  transition: all 0.3s ease;
+  padding-inline: 100px;
 
   @include mobile {
     padding-inline: 70px;
@@ -29,6 +28,7 @@
 }
 
 .title {
+  max-width: 515px;
   margin-top: 40px;
   font-size: 36px;
   font-weight: 700;
@@ -37,7 +37,6 @@
   letter-spacing: -1.2px;
   color: #161c2d;
   transition: all 0.3s ease;
-  max-width: 515px;
 
   @include desktop {
     font-size: 32px;
@@ -61,22 +60,23 @@
 }
 
 .content {
-  display: inline-flex; //
-
+  display: inline-flex;
   column-gap: 96px;
   margin-top: 120px;
   transition: all 0.3s ease;
 
-  @media (max-width: 1330px) {
+  @media (width <= 1330px) {
     column-gap: 80px;
   }
 
   @include desktop {
     column-gap: 75px;
   }
+
   @include tablet {
     margin-top: 70px;
   }
+
   @include mobile {
     flex-direction: column;
     align-items: center;
@@ -89,25 +89,30 @@
   flex-shrink: 0;
   width: 445px;
   transition: all 0.3s ease;
-  @media (max-width: 1330px) {
+
+  @media (width <= 1330px) {
     width: 410px;
   }
+
   @include desktop {
     width: 360px;
   }
-  @media (max-width: 1250px) {
+
+  @media (width <= 1250px) {
     width: 300px;
   }
+
   @include tablet {
     width: 270px;
   }
+
   @include mobile {
     width: 230px;
   }
 }
 
 .content_right {
-  display: flex; //
+  display: flex;
   flex-direction: column;
 }
 
@@ -115,70 +120,83 @@
   display: flex;
   column-gap: 95px;
   transition: all 0.3s ease;
-  @media (max-width: 1330px) {
+
+  @media (width <= 1330px) {
     column-gap: 80px;
   }
+
   @include desktop {
     column-gap: 70px;
   }
+
   @include mobile {
     justify-content: center;
   }
 }
 
 .mid_foto {
-  margin-top: -70px;
-  width: 318px;
   flex-shrink: 0;
+  width: 318px;
+  margin-top: -70px;
   transition: all 0.3s ease;
-  @media (max-width: 1330px) {
+
+  @media (width <= 1330px) {
     width: 300px;
   }
+
   @include desktop {
     width: 260px;
   }
-  @media (max-width: 1250px) {
+
+  @media (width <= 1250px) {
     width: 230px;
   }
+
   @include tablet {
     width: 200px;
   }
+
   @include mobile {
     margin-top: 0;
   }
 }
 
 .last_foto {
-  margin-top: 46px;
-  width: 160px;
   flex-shrink: 0;
+  width: 160px;
+  margin-top: 46px;
   transition: all 0.3s ease;
-  @media (max-width: 1330px) {
+
+  @media (width <= 1330px) {
     width: 150px;
   }
+
   @include desktop {
     width: 140px;
   }
-  @media (max-width: 1250px) {
+
+  @media (width <= 1250px) {
     width: 120px;
   }
+
   @include tablet {
     width: 110px;
   }
 }
 
 .description {
-  max-width: 490px;
   display: flex;
-  flex-grow: 1;
   align-items: end;
-  color: #161c2d;
+  flex-grow: 1;
+  max-width: 490px;
   font-size: 17px;
-  font-style: normal;
   font-weight: 400;
-  line-height: 29px; /* 170.588% */
+  font-style: normal;
+  line-height: 29px;
   letter-spacing: -0.2px;
+  color: #161c2d;
   transition: all 0.3s ease;
+
   @include desktop {
     font-size: 15px;
     line-height: 22px;
@@ -190,9 +208,9 @@
   }
 
   @include mobile {
+    margin-top: 25px;
     font-size: 10px;
     line-height: 18px;
-    margin-top: 25px;
   }
 
   @include mobile {
